# tradezoo

./: pyproject.toml
experiments/: hyperparameter-exploration.ipynb  hyperparameters.py  hyperparameters.sh  multi-agent.ipynb  run-hyperparameters.sh  sine-wave.ipynb
experiments/from-scratch/: a2c.ipynb
experiments/hyperparameters/: exploration.ipynb  results.json  run-search.sh  search-job.sh  search.py  tradezoo
notebooks/: ddpg.ipynb  dummy-task.ipynb  from-scratch.ipynb  full-test.ipynb  hyperparameter-search.ipynb  mock-actor.ipynb  mock-buffer.ipynb  mock-critic.ipynb  reward-test.ipynb  sine-wave.ipynb  test.ipynb
notebooks/from-scratch/: ddpg.ipynb  dqn.ipynb  observation.py  tradezoo
tests/market/: test_market.py  test_order.py  test_trade.py
tradezoo/: Trader.py  __init__.py  trader.py
tradezoo/agent/: __init__.py  action.py  actor.py  agent.py  critic.py  decision.py  decision_batch.py  log_normal_batch.py  log_squish.py  normal_batch.py  observation.py  state.py  state_batch.py
tradezoo/experiment/: experiment.py
tradezoo/game/: __init__.py  agent_config.py  client.py  experience.py  game.py  geometric_brownian_motion.py  market_maker.py  ownership.py  random_process.py  state.py  time_series.py  trader.py  turn_result.py
tradezoo/market/: __init__.py  account.py  account_filter.py  market.py  order.py  trade.py
tradezoo/plots/: __init__.py  balance_plot.py  decision_plot.py  loss_plot.py  reward_plot.py  td_error_plot.py  trades_plot.py  training_plot.py  uncertainty_plot.py  utility_plot.py
tradezoo/trainer/: __init__.py  trainer.py  (+3 more)
(+17 files in other folders)
